Infrastructure-Identify ignore test cases

--- a/src/Test/OpenOfficeConvert/TestFiles/input/Table2.xhtml
+++ b/src/Test/OpenOfficeConvert/TestFiles/input/Table2.xhtml
@@ -8,7 +8,7 @@
         <meta name="en" content="English" scheme="Language Name" />
         <meta name="en" content="Times New Roman" scheme="Default Font" />
         <meta name="ur" content="Urdu" scheme="Language Name" />
-        <meta name="ur" content="Scheherazade Graphite Alpha" scheme="Default Font" />
+        <meta name="ur" content="Times New Roman" scheme="Default Font" />
         <meta name="ur-x-ind" content="Urdu (ind)" scheme="Language Name" />
         <meta name="ur-x-ind" content="Times New Roman" scheme="Default Font" />
     </head>
