--- a/DistFiles/Html5/Dictionary/pages/template.html
+++ b/DistFiles/Html5/Dictionary/pages/template.html
@@ -3,25 +3,28 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="{11}"/>
+    <meta name="author" content="{10}"/>
 
-    <title>%(pagetitle)s</title>
+    <title>{0}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 
     <!-- MetisMenu CSS -->
-    <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet"/>
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../dist/css/sb-admin-2.css" rel="stylesheet"/>
 
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+
+	<!-- Page CSS -->
+    <link href="{9}" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,19 +48,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">%(head)s %(version)s</a>
+                <a class="navbar-brand" href="index.html">{1} {2}</a>
             </div>
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="%(backlink)s">
+                    <a href="{3}">
                         <i class="fa fa-backward fa-fw"></i>
                     </a>
                 </li>
                 <!-- /.dropdown -->
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="%(forelink)s">
+                    <a href="{4}">
                         <i class="fa fa-forward fa-fw"></i>
                     </a>
                 </li>
@@ -69,10 +72,10 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="index.html">Browse</a>
                         </li>
-                        <li><a href="%(categorylink)s">Categories</a>
+                        <li><a href="{5}">Categories</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="%(aboutlink)s"><i class="fa fa-info-circle fa-fw"></i> About</a>
+                        <li><a href="{6}"><i class="fa fa-info-circle fa-fw"></i> About</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -86,7 +89,7 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
+                                <input type="text" class="form-control" placeholder="Search..."/>
                                 <span class="input-group-btn">
                                 <button class="btn btn-default" type="button">
                                     <i class="fa fa-search"></i>
@@ -95,7 +98,7 @@
                             </div>
                             <!-- /input-group -->
                         </li>
-						%(sidebar)s
+						{7}
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
@@ -106,7 +109,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    %(content)s
+                    {8}
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
