TD-4793 HTML5 add simple search

--- a/DistFiles/Html5/Dictionary/pages/template.html
+++ b/DistFiles/Html5/Dictionary/pages/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -91,7 +91,7 @@
                             <div class="input-group custom-search-form">
                                 <input type="text" class="form-control" placeholder="Search..."/>
                                 <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
+                                <button class="btn btn-default" type="button" onclick="search()">
                                     <i class="fa fa-search"></i>
                                 </button>
                             </span>
@@ -131,6 +131,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+
+	<script src="../dist/js/search.js"></script>
 
 </body>
 
