TD-4793 display modal dialog of all search results

--- a/DistFiles/Html5/Dictionary/pages/template.html
+++ b/DistFiles/Html5/Dictionary/pages/template.html
@@ -109,6 +109,28 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
+  <button id="resultsBtn" type="button" class="btn btn-info btn-lg hide" data-toggle="modal" data-target="#myModal">Search Results</button>
+
+				  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Search Results</h4>
+        </div>
+        <div class="modal-body">
+          <ul id="searchResults"></ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
                     {8}
                 </div>
                 <!-- /.col-lg-12 -->
