Adjust Menu item to refer to classified dictionary as FieldWorks does

--- a/DistFiles/Html5/Dictionary/pages/template.html
+++ b/DistFiles/Html5/Dictionary/pages/template.html
@@ -72,7 +72,7 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="index.html">Browse</a>
                         </li>
-                        <li><a href="{5}">Categories</a>
+                        <li><a href="{5}">Classified</a>
                         </li>
                         <li class="divider"></li>
                         <li><a href="{6}"><i class="fa fa-info-circle fa-fw"></i> About</a>
