Add a button to open and close the sidebar menu

--- a/DistFiles/Html5/Dictionary/pages/template.html
+++ b/DistFiles/Html5/Dictionary/pages/template.html
@@ -49,6 +49,12 @@
 
             <ul class="nav navbar-top-links navbar-right">
                 <li class="dropdown">
+                    <a id="menu-toggle" href="#">
+                        <i class="fa fa-list fa-fw"></i>
+                    </a>
+                </li>
+                <!-- /.dropdown -->
+                <li class="dropdown">
                     <a href="{3}">
                         <i class="fa fa-backward fa-fw"></i>
                     </a>
@@ -149,6 +155,7 @@
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
 	<script src="../dist/js/search.js"></script>
+	<script src="../dist/js/menu-toggle.js"></script>
 
 </body>
 
