TD-4770 Fixing Linux Testcases
* Partially test failures fixed

--- a/src/Test/OpenOfficeConvert/TestFiles/input/PictureSpaceAfter.xhtml
+++ b/src/Test/OpenOfficeConvert/TestFiles/input/PictureSpaceAfter.xhtml
@@ -32,7 +32,7 @@
                     <span class="mainheadword-ps" xml:space="preserve">  </span>
                 </span>
                 <div class="picture">
-                    <img class="thumbnail" src="pictures\color-palette.jpg"
+                    <img class="thumbnail" src="color-palette.jpg"
                         id="g51a2b37b-4d1b-4280-adb4-9a05dffa3802"/>
                     <div class="captionContent">
                         <span class="sensenumber">
