Revert "TD-4770:Test Results"
This reverts commit 990875b140d989668df8454d347ae1357ceb6ec3.

--- a/src/Test/OpenOfficeConvert/TestFiles/input/NewGuidewordStyle2.xhtml
+++ b/src/Test/OpenOfficeConvert/TestFiles/input/NewGuidewordStyle2.xhtml
@@ -195,7 +195,7 @@
                 </span>
                 <span class="pictures">
                     <div class="picture">
-                        <img class="thumbnail" src="waak-.jpg"
+                        <img class="thumbnail" src="pictures\waak-.jpg"
                             id="g3f0fcd2a-9479-4d6c-bed7-0689eea29d2b"/>
                         <div class="sensenumber">
                             <span lang="en">1</span>
@@ -401,7 +401,7 @@
                 </span>
                 <span class="pictures">
                     <div class="picture">
-                        <img class="thumbnail" src="Wes-.jpg"
+                        <img class="thumbnail" src="pictures\Wes-.jpg"
                             id="g0ed6fd52-911a-47a7-86e1-8ac3d93a0544"/>
                         <div class="sensenumber">
                             <span lang="en">1</span>
