Split each entry into a html5 file

--- a/DistFiles/Copyrights/Draft.xhtml
+++ b/DistFiles/Copyrights/Draft.xhtml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir='ltr'>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir='ltr'>
       <head>
             <title>Copyright Statement</title>
             <link rel="stylesheet" href="Copy.css" type="text/css" />
 </head>
-	<!-- 
+	<!--
 	This is the boilerplate Draft license, used by Pathway's Export Through Pathway dialog.
 	You are welcome to make a copy of this file, modify it to your needs, and specify the modified file as your custom rights agreement file
 	from the Front Matter tab of the Export Through Pathway dialog. For your own benefit, please have any modifications reviewed by a legal counsel
@@ -20,9 +20,9 @@
 	</div>
 	<p>&#xA0;</p>
 
-	<!-- 
-	Individual copyright details - contributors, illustrations, etc. 
-	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway 
+	<!--
+	Individual copyright details - contributors, illustrations, etc.
+	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway
 	during export - do not modify this section.
 	-->
 	<div id='OtherCopyrights' class='Front_Matter' dir='ltr'>
@@ -31,16 +31,16 @@
 	<div id='Logo' class='Front_Matter' dir='ltr'>
 	</div>
 	<p>&#xA0;</p>
-	
+
 	<div id='LicenseInformation' class='Front_Matter' dir='ltr'>
 	<p><em>DRAFT DOCUMENT</em></p>
 	<p><em>Please note that this document is not in its final form. This document was printed during the normal course of a review process by the creator or editor, and will likely be superceded in both content and format by a newer version.</em></p>
 	</div>
 	<p>&#xA0;</p>
 
-	<!-- 
-	Individual copyright details - contributors, illustrations, etc. 
-	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway 
+	<!--
+	Individual copyright details - contributors, illustrations, etc.
+	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway
 	during export - do not modify this section.
 	-->
 	<div id='OtherCopyrights' class='Front_Matter' dir='ltr'>
