--- a/DistFiles/Copyrights/SIL_CC-by-nc-nd.xhtml
+++ b/DistFiles/Copyrights/SIL_CC-by-nc-nd.xhtml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir="ltr">
       <head>
             <title>Copyright Statement</title>
             <link rel="stylesheet" href="Copy.css" type="text/css" />
@@ -17,9 +17,9 @@
 	<div id='CopyrightHeader' class='Front_Matter' dir='ltr'>
 	</div>
 
-	<!-- 
-	Individual copyright details - contributors, illustrations, etc. 
-	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway 
+	<!--
+	Individual copyright details - contributors, illustrations, etc.
+	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway
 	during export - do not modify this section.
 	-->
 	<div id='OtherCopyrights' class='Front_Matter' dir='ltr'>
@@ -29,7 +29,7 @@
 	<!-- License information - what can the user do with this document? -->
 	<div id='LicenseInformation' class='Front_Matter' dir='ltr'>
 	<div> This work is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 4.0 Unported License.</div>
-	<div>To view a copy of this license, visit </div><div><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">http://creativecommons.org/licenses/by-nc-nd/4.0/</a> 
+	<div>To view a copy of this license, visit </div><div><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">http://creativecommons.org/licenses/by-nc-nd/4.0/</a>
 	</div>
 	</div>
 	<!--or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.</p>
