--- a/DistFiles/Html5/Dictionary/pages/indexTemplate.html
+++ b/DistFiles/Html5/Dictionary/pages/indexTemplate.html
@@ -14,8 +14,12 @@
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 
+    <!-- MetisMenu CSS -->
+    <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet"/>
+
     <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet"/>
+	<link href="../dist/css/simple-sidebar.css" rel="stylesheet"/>
 
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
@@ -44,6 +48,12 @@
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
+                <li class="dropdown">
+                    <a id="menu-toggle" href="#">
+                        <i class="fa fa-list fa-fw"></i>
+                    </a>
+                </li>
+                <!-- /.dropdown -->
                 <li class="dropdown">
                     <a href="{3}">
                         <i class="fa fa-backward fa-fw"></i>
@@ -76,10 +86,53 @@
             <!-- /.navbar-top-links -->
         </nav>
 
+		<div id="sidebar-wrapper">
+			<ul class="sidebar-nav" id="side-menu">
+				<li class="sidebar-search">
+					<div class="input-group custom-search-form">
+						<input type="text" class="form-control" placeholder="Search..."/>
+						<span class="input-group-btn">
+						<button class="btn btn-default" type="button" onclick="search()">
+							<i class="fa fa-search"></i>
+						</button>
+					</span>
+					</div>
+					<!-- /input-group -->
+				</li>
+				{7}
+			</ul>
+		</div>
+		<!-- /.navbar-static-side -->
+
         <div id="page-content-wrapper">
 			<div class="container-fluid">
 				<div class="row">
-					{7}
+					<div class="col-lg-12">
+						<button id="resultsBtn" type="button" class="btn btn-info btn-lg hide" data-toggle="modal" data-target="#myModal">Search Results</button>
+
+									  <!-- Modal -->
+						<div class="modal fade" id="myModal" role="dialog">
+							<div class="modal-dialog">
+
+							  <!-- Modal content-->
+							  <div class="modal-content">
+								<div class="modal-header">
+								  <button type="button" class="close" data-dismiss="modal">&times;</button>
+								  <h4 class="modal-title">Search Results</h4>
+								</div>
+								<div class="modal-body">
+								  <ul id="searchResults"></ul>
+								</div>
+								<div class="modal-footer">
+								  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+								</div>
+							  </div>
+
+							</div>
+						</div>
+						{11}
+					</div>
+					<!-- /.col-lg-12 -->
 				</div>
 				<!-- /.row -->
 			</div>
@@ -96,8 +149,13 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
+	<script src="../dist/js/search.js"></script>
+	<script src="../dist/js/menu-toggle.js"></script>
 
 </body>
 
