--- a/DistFiles/Copyrights/CC-by-nc-sa.xhtml
+++ b/DistFiles/Copyrights/CC-by-nc-sa.xhtml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir='ltr'>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir='ltr'>
       <head>
             <title>Copyright Statement</title>
             <link rel="stylesheet" href="Copy.css" type="text/css" />
 </head>
-	<!-- 
+	<!--
 	This is the boilerplate Creative Commons "share-alike" license, used by Pathway's Export Through Pathway dialog.
 	You are welcome to make a copy of this file, modify it to your needs, and specify the modified file as your custom rights agreement file
 	from the Front Matter tab of the Export Through Pathway dialog. For your own benefit, please have any modifications reviewed by a legal counsel
@@ -21,9 +21,9 @@
 
 	<div id='CopyrightHeader' class='Front_Matter' dir='ltr'>
 	</div>
-	<!-- 
-	Individual copyright details - contributors, illustrations, etc. 
-	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway 
+	<!--
+	Individual copyright details - contributors, illustrations, etc.
+	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway
 	during export - do not modify this section.
 	-->
 	<div id='OtherCopyrights' class='Front_Matter' dir='ltr'>
@@ -32,7 +32,7 @@
 	<div id='Logo' class='Front_Matter' dir='ltr'>
 	</div>
 	<p>&#xA0;</p>
-	
+
 	<!-- Copyright license information. This is the standard Creative Commons by-nc-sa license. -->
 	<div id='LicenseInformation' class='Front_Matter' dir='ltr'>
 	<p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 Unported License. To view a copy of this license, visit <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">http://creativecommons.org/licenses/by-nc-sa/4.0/</a> or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.</p>
