--- a/DistFiles/Copyrights/Custom_Template.xhtml
+++ b/DistFiles/Copyrights/Custom_Template.xhtml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir='ltr'>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir='ltr'>
       <head>
             <title>Copyright Statement</title>
             <link rel="stylesheet" href="Copy.css" type="text/css" />
@@ -18,15 +18,15 @@
 	<!-- Copyright license information - no rights explicitly given to the recipient. -->
 	</div>
 	<p>&#xA0;</p>
-		
+
 	<div id='LicenseInformation' class='Front_Matter' dir='ltr'>
 	<!-- **** Insert your custom license here. **** -->
 	</div>
 	<p>&#xA0;</p>
-	
-	<!-- 
-	Individual copyright details - contributors, illustrations, etc. 
-	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway 
+
+	<!--
+	Individual copyright details - contributors, illustrations, etc.
+	These are automatically inserted from the Publication Info tab of the Export Through Pathway dialog by Pathway
 	during export - do not modify this section.
 	-->
 	<div id='OtherCopyrights1' class='Front_Matter' dir='ltr'>
